test/files/neg/t5830.check
t5830.scala:8: warning: unreachable code
    case 'a' => println("b") // unreachable
                       ^
t5830.scala:6: warning: could not emit switch for @switch annotated match
  def unreachable(ch: Char) = (ch: @switch) match {
                                    ^
2 warnings
error: No warnings can be incurred under -Werror.
